# HL

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  HL_LOG.txt  README.md  _collected_latest_20260603_101203.rar  _collected_latest_20260606_004950.rar  app.json  app.json.bak  kernel - 副本.xml  kernel-efem.xml  kernel-设备配置.xml  kernel.xml  kernel.xmlbak  kernel_模拟.xml  kernel_现场.xml  slot_transfer_cycle_vtm_widget.cpp  switch-kernel-menu.cmd  switch-kernel-status.cmd  switch-kernel-to-simulate.cmd  switch-kernel-to-site.cmd  switch-kernel.ps1  一键运行_删除真空日志.bat  七段式S型曲线参数.md  删除真空日志.py  流程调度时序.txt  目前调度问题.md
app/: CCreateDump.cpp  CCreateDump.h  CCreateDump.h.bak  CMakeLists.txt  main.cpp  main.cpp.bak
device/: CMakeLists.txt  CMakeLists.txt.bak
device/InovancePLCExternal/: ModbusTcpAPI.exp  ModbusTcpAPI.lib  StandardModbusApi.exp  StandardModbusApi.lib
device/doc/: CycleStateSnapshot使用说明.md  EFEM调用流程图与迁移图分析.md  MES系统基础知识及对接开发指南.md  PM_Spindle_运动逻辑说明.md  Qt Designer自定义控件快速布局方案.md  SchedulerV2重构方案.md  VTM系统工作流程与联动机制分析.md  VTM项目设计方案.md  scheduler-gate-timing.md  slot_transfer_cycle_flow.md  slot_transfer_cycle_vtm_logic.md  slot_transfer_cycle_vtm_调度系统分析.md  七段式S型曲线参数1.md  旧版slot_transfer_cycle_vtm_widget调度分析.md  重构wtr调度.md
device/include/: CycleStateSnapshot.h  ScientificDoubleSpinBox.h  TaskManager.h  TaskManager.h.bak  ThreadSafeStateMachine.h  UnifiedWaferTask.h  UnifiedWaferTask.h.bak  base_hex_api.h  control_mode_vtm_widget.h  driver_output_handler_file.h  efem_ascii_api.h  efem_hex_api.h  fortrend_ascii_api.h  fortrend_device_kernel.h  fortrend_device_script_module.h  fortrend_device_ui_model.h  fortrend_device_user_module.h  fortrend_station_status_vtm_widget.h  history-line-stack.html  modbus_master.h  pm_recipe_widget.h  pm_recipe_widget.h.bak  pm_spindle_signal_server_api.h  qcustomplot.h  slot_transfer_auto_vtm_widget.h  slot_transfer_cycle_vtm_new_widget.h  slot_transfer_cycle_vtm_widget.h  tcp_client_api.h  update_loadlock_state_ui_thread.h  update_pm_cavity_state_ui_thread.h  update_station_state_ui_thread.h  update_ui_thread.h  update_wtr_state_ui_thread.h  vtm_system_control_hlayout_widget.h
device/include/Aligner/: aligner_command_executer.h  aligner_subsystem_helper.h  fortrend_aligner_align_command.h  fortrend_aligner_output_command.h  fortrend_aligner_reset_command.h  fortrend_aligner_subsystem.h  fortrend_aligner_subsystem_widget.h  fortrend_aligner_update_command.h
device/include/BreakVacuum/: fortrend_breakvacuum_subsystem_widget.h
device/include/CoolingCavity/: fortrend_cooling_cavity_close_diaphragm_valve_command.h  fortrend_cooling_cavity_cooling_command.h  fortrend_cooling_cavity_open_diaphragm_valve_command.h  fortrend_cooling_cavity_output_command.h  fortrend_cooling_cavity_reset_command.h  fortrend_cooling_cavity_subsystem.h  fortrend_cooling_cavity_subsystem_widget.h  fortrend_cooling_cavity_update_command.h
device/include/Data/: fortrend_data_subsystem_helper.h  fortrend_data_subsystem_widget.h  fortrend_data_subsystem_widget.h.bak  fortrend_datahistory_subsystem_widget.h  fortrend_datahistory_subsystem_widget.h.bak
device/include/EFEM/: efem_aligner_abstract_subsystem_widget.h  efem_aligner_align_command.h  efem_aligner_getmap_command.h  efem_aligner_ocr_command.h  efem_aligner_reset_command.h  efem_aligner_rotate_command.h  efem_aligner_status_command.h  efem_aligner_subsystem.h  efem_loadport_abstract_subsystem_widget.h  efem_loadport_closebox_command.h  efem_loadport_closedoor_command.h  efem_loadport_getmap_command.h  efem_loadport_lockbox_command.h  efem_loadport_openbox_command.h  efem_loadport_opendoor_command.h  efem_loadport_reset_command.h  efem_loadport_status_command.h  efem_loadport_subsystem.h  efem_loadport_unlockbox_command.h  efem_robot_getwafer_command.h  efem_robot_putwafer_command.h  efem_robot_reset_command.h  efem_robot_speed_command.h  efem_robot_status_command.h  efem_robot_wafer_abstract_subsystem_widget.h  efem_wafer_robot_subsystem.h  tcp_efem_command_executer.h  tcp_efem_subsystem_helper.h
device/include/ExcelAssistant/: excel_assistant.h
device/include/InovancePLC/: inovance_plc_command_executer.h  inovance_plc_subsystem_helper.h
device/include/InovancePLCExternal/: Hc_Modbus_Api.h  Include.h  ModbusTcpAPI.h  MontionCtrl.h
device/include/KYKY/: kyky_command_executer.h  kyky_subsystem_helper.h
device/include/KeyencePLC/: keyence_plc_command_executer.h  keyence_plc_subsystem_helper.h  keyence_plc_subsystem_helper.h.bak
device/include/LoadLock/: fortrend_loadlock_auto_break_vacuum_command.h  fortrend_loadlock_cavity_close_height_vacuum_baffle_valve_command.h  fortrend_loadlock_cavity_close_inserting_plate_valve_command.h  fortrend_loadlock_cavity_open_height_vacuum_baffle_valve_command.h  fortrend_loadlock_cavity_open_inserting_plate_valve_command.h  fortrend_loadlock_clear_error_command.h  (+19 more)
device/src/: CycleStateSnapshot.cpp  ScientificDoubleSpinBox.cpp  TaskManager.cpp  ThreadSafeStateMachine.cpp  base_hex_api.cpp  control_mode_vtm_widget.cpp  control_mode_vtm_widget.ui  driver_output_handler_file.cpp  efem_ascii_api.cpp  efem_ascii_api.cpp.bak  efem_hex_api.cpp  fortrend_ascii_api.cpp  fortrend_device_kernel.cpp  fortrend_device_script_module.cpp  fortrend_device_ui_model.cpp  fortrend_device_ui_model.cpp.bak  fortrend_device_user_module.cpp  fortrend_station_status_vtm_widget - 副本.ui  fortrend_station_status_vtm_widget.cpp  fortrend_station_status_vtm_widget.cpp.bak  fortrend_station_status_vtm_widget.ui  fortrend_station_status_vtm_widget.ui.bak  fortrend_station_status_vtm_widget_10_29.ui  libdevice_plugin.pluginspec  modbus_master.cpp  pm_lock_changes.diff  pm_recipe_widget.cpp  pm_recipe_widget.cpp.bak  pm_recipe_widget.ui  pm_spindle_signal_server_api.cpp  qcustomplot.cpp  slot_transfer_auto_vtm_widget.cpp  slot_transfer_auto_vtm_widget.ui  slot_transfer_cycle_vtm_new_widget.cpp  slot_transfer_cycle_vtm_new_widget.ui  slot_transfer_cycle_vtm_widget.cpp  slot_transfer_cycle_vtm_widget.cpp.bak  slot_transfer_cycle_vtm_widget.cppbak  slot_transfer_cycle_vtm_widget.ui  status_background.qrc  (+9 more)
(+511 files in other folders)
